eacer.docuscrypt/service.yml
apiVersion: v1
kind: Service
metadata:
  name: docuscrypt-service
  namespace: default
spec:
  selector:
    app: docuscrypt
  ports:
    - port: 8000
      targetPort: 8000
